update main image

--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
 		</div>
 		<div class="mid-banner">
 			<img src="images/branding.jpg" alt="laptop on desk">
-			<h2>Start coding now.</h2>
 			
 		</div>
 		<section class="process">
-			<h1>About</h1>
+			<h1>More Info</h1>
 			<div class="row">
 				<article class="one-half column">
 					<h1>Student Information</h1>
