--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>FooCorp - Home</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i|Montserrat:400,400i,700,700i" rel="stylesheet">
-<link rel="stylesheet" href="styles/bootstrap-reboot.min.css">
-<link rel="stylesheet" href="css/main.css">
+	<title>BCIT-SSD</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i|Montserrat:400,400i,700,700i" rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
@@ -16,7 +16,7 @@
 		<button class="btn-menu">Menu</button>
 		<nav>
 			<ul>
-				<li><a href="#0">Overview</a></li>
+				<li><a href="overview.html">Overview</a></li>
 				<li><a href="#0">Courses</a></li>
 				<li><a href="#0">Schedule</a></li>
 				<li><a href="#0">Staff</a></li>
