added contact page
added contact page

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    	<title>BCIT-SSD Overview</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +8,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">  
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>BCIT-SSD Contacts</title>
 </head>
 <body>
 <header>
+
     <div class="header-content-wrap container">
         <h1><a href="index.html">BCIT</a></h1>
         <button class="btn-menu">Menu</button>
@@ -29,12 +30,47 @@
 <div class="wrapper container">
     <main>
         <section class="process">
-            <h1>Program Overview</h1>
+            <h1>Contact Us!</h1>
 
-            <p>The Software Systems Developer (SSD) program (Web Programmer option) is an eight month, full-time business application development program offered by BCIT's School of Computing and Academic Studies, within the HTP department at the downtown Vancouver campus.</p>
-            <p>It prepares individuals for high-demand careers in the technical areas of web application development, programming, database and systems analysis. Students learn industry-ready skills through extensive hands-on practice in current scripting and coding techniques, object-oriented architecture patterns, application security and scalability, developer tools, and platforms for building complete web-based business applications from scratch. Graduates of this certificate program may apply for acceptance into the BCIT Bachelor of Technology in Computer Systems (additional prerequisites are required).</p>
-            <p>This program is delivered through classroom instruction, hands-on lab work and individual and team projects.</p>
-            <p>While applicants are not required to have formal computer programming experience, they need to have a solid understanding of object oriented programming as well as possess sound logical and reasoning skills. Applicants with no knowledge are advised to take a programming language course, such as introduction to object-oriented programming, C#, or Java.</p>
+                <div>
+                    <section class="process">
+                        <h2>Helpful Links</h2>
+                        <ul>
+                            <li><a href="https://secure.bcit.ca/sis/apply/">Start your application.</a></li>
+                            <li><a href="https://secure.bcit.ca/sis/apply/">Check your application status.</a></li>
+                            <li><a href="https://www.bcit.ca/international/">Find more information for international students.</a></li>
+                            <li><a href="https://www.bcit.ca/finaid/">Find more information about financial aids.</a></li>
+                        </ul>
+                    </section>
+                    <section class="process">
+                        <h2>Contact Information</h2>
+                            <div class="contactInfo">
+                                <section class="box">
+                                        <h4>For admission and program inquiries: </h4>
+                                        <ul>
+                                                <li><b>Phone: </b>604.412.7788</li>
+                                                <li><b>Fax: </b>604.408.0921</li>
+                                                <li><b>Email: </b>HTP@bcit.ca</li>
+                                        </ul>
+                                </section>
+                                <section class="box">
+                                        <h4>Mailing Adress</h4>
+                                        <ul>
+                                                <li>
+                                                    HTP Programs - BCIT Downtown Campus<br>
+                                                    350 - 555 Seymour Street<br>
+                                                    Vancouver, BC, Canada <br>
+                                                    V6B 3H6
+                                                </li>
+                                            </ul>
+                                </section>
+                            </div>
+                    </section>
+                    <section class="process">
+                        <h2>Contact</h2>
+                    </section>
+                </div>
+            
 
             <table class="table table-striped">
                 <thead class="thead-dark">
