--- a/contact.html
+++ b/contact.html
@@ -18,11 +18,12 @@
         <button class="btn-menu">Menu</button>
         <nav>
             <ul>
-                <li><a href="overview.html">Overview</a></li>
-                <li><a href="#0">Courses</a></li>
-                <li><a href="#0">Schedule</a></li>
-                <li><a href="#0">Staff</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                    <li><a class="nav-link"  href="overview.html">Overview</a></li>
+                    <li><a class="nav-link" href="courses.html">Courses</a></li>
+                    <li><a class="nav-link" href="schedule.html">Schedule</a></li>
+                    <li><a class="nav-link" href="staff.html">Staff</a></li>
+                    <li><a class="nav-link" href="students.html">Students</a></li>
+                    <li><a class="nav-link" href="resources.html">Resources</a></li>
             </ul>
         </nav>	
     </div>
@@ -67,69 +68,72 @@
                             </div>
                     </section>
                     <section class="process">
-                        <h2>Contact</h2>
+                        <h2>Contact Form</h2>
+                        <form onsubmit="alert('Thank you for your feedback.');" method="post" class="form">
+                            <div class="formRow">
+                                <div class="formLabel">
+                                    <label for="firstname">First name</label>
+                                </div>
+                                <div class="formInput">
+                                    <input type="text" name="firstname" id="firstname" maxlength="80" placeholder="First Name" required="">
+                                </div>
+                            </div>
+                            <div class="formRow">
+                                <div class="formLabel">
+                                    <label for="lastname">Last name</label>
+                                </div>
+                                <div class="formInput">
+                                    <input type="text" name="lastname" id="lastname" maxlength="80" placeholder="Last Name" required="">
+                                </div>
+                            </div>
+                            <div class="formRow">
+                                <div class="formLabel">
+                                    <label for="email">Email</label>
+                                </div>
+                                <div class="formInput">
+                                    <input type="email" name="email" id="email" maxlength="80" placeholder="email@example.com" required="">
+                                </div>
+                            </div>
+                            <div class="formRow">
+                                <div class="formLabel">
+                                        <label for="phone">Phone</label>
+                                </div>
+                                <div class="formInput">
+                                        <input type="tel" name="phone" id="phone" maxlength="30" placeholder="(123) 456 - 7890">
+                                </div>
+                            </div>
+                            <div class="formRow">
+                                <div class="select">
+                                    <label><input type="radio" name="status" value="CurrentStudent" required=""> Current Student</label><br>
+                                    <label><input type="radio" name="status" value="ProsoectiveStudent"> Prosoective Student</label><br>
+                                    <label><input type="radio" name="status" value="Instructor"> Instructor</label>
+                                </div>
+                            </div>
+                            <div class="formRow">
+                                <div>
+                                    <label for="comments">Questions or Comments</label>
+                                </div>
+                                <div>
+                                    <textarea name="comments" id="comments" rows="5" cols="23" required=""></textarea>
+                                </div>
+                            </div>
+                            <div class="formRow">
+                                <div class="actions">
+                                    <input id="submit" type="submit" value="send » ">
+                                </div>
+                            </div>
+                        </form>
+                    </section>
                     </section>
                 </div>
-            
-
-            <table class="table table-striped">
-                <thead class="thead-dark">
-                    <tr>
-                        <th colspan="2">SOFTWARE SYSTEMS DEVELOPER - Web Programmer Option</th>                     
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th >Credential:</th>
-                        <td >Certificate</td>                
-                    </tr>
-                    <tr>
-                        <th>Location:</th>
-                        <td>Downtown Vancouver</td>
-                    </tr>
-                    <tr>
-                        <th>Program Length:</th>
-                        <td>8 months, Full-time</td>
-                    </tr>
-                    <tr>
-                        <th>Program Start:</th>
-                        <td>September 10, 2019</td>
-                    </tr>
-                    <tr>
-                        <th>Program End:</th>
-                        <td>May 10, 2020</td>
-                    </tr>
-                </tbody>
-            </table>
-            <div>
-                <article class="column">
-                    <h1>Entrance requirements</h1>
-                    <p>This program has a two-step admission process. Applicants must meet all entrance requirements and will be accepted on a first qualified basis as long as space remains.</p>
-                </article>
-                <article class="column">
-                    <h2>Step 1: Pre-entry assessment</h2>
-                    <p>Pre-entry Assessment [PDF]: Meet with the Program Coordinator or attend a Software Systems Developer (SSD) Info Session to have your pre-entry assessment approved.</p>
-                    <p>A completed and approved pre-entry assessment form must be uploaded to complete your application.</p>
-                </article>
-                <article class="column">
-                    <h2>Step 2: Meet the following entrance requirements</h2>
-                    <p>English: two years of education in English in an English-speaking country with one of the following:
-                    <ul>
-                        <li>English 12 (50%) or</li>
-                        <li>3.0 credits of post-secondary English, humanities or social sciences (50%) from a recognized institution</li><br>
-                        What if I don’t meet these English requirements?<br><br>
-                        <strong>Programming:</strong> one of the following (or equivalent):<br><br>
-                        <li>COMP 1409 - Introduction to Software Development 1 (70%) or</li>
-                        <li>3.0 credits of post-secondary object-oriented programming from a recognized institution (70%)</li>                 
-                    </ul>
-                </article>
-            </div>
-        </section>
+            </section>
     </main>
     <footer>
         <div class="row">
             <div class="one-third column">
                 <h2><a href="#0">BCIT-SSD</a></h2>
+                <p><a href="contact.html">Contact</a></p>
+
             </div>
             <div class="one-third column">
                 <h2 class="credits">Connect</h2>
@@ -147,5 +151,8 @@
         </div>
     </footer>
 </div>
+<script src="scripts/menu.js"></script>
+
 </body>
+
 </html>
