--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
-<header>
-	<div class="header-content-wrap container">
-		<h1><a href="#0">BCIT</a></h1>
-		<button class="btn-menu">Menu</button>
-		<nav>
-			<ul>
-				<li><a href="overview.html">Overview</a></li>
-				<li><a href="#0">Courses</a></li>
-				<li><a href="#0">Schedule</a></li>
-				<li><a href="#0">Staff</a></li>
-				<li><a href="#0">Contact</a></li>
-			</ul>
-		</nav>	
-	</div>
-</header>
+	<header>
+			<div class="header-content-wrap container">
+				<h1><a href="index.html">BCIT</a></h1>
+				<button class="btn-menu">Menu</button>
+				<nav >
+					<ul>
+							<li><a class="nav-link"  href="overview.html">Overview</a></li>
+							<li><a class="nav-link" href="courses.html">Courses</a></li>
+							<li><a class="nav-link" href="schedule.html">Schedule</a></li>
+							<li><a class="nav-link" href="staff.html">Staff</a></li>
+							<li><a class="nav-link" href="students.html">Students</a></li>
+							<li><a class="nav-link" href="resources.html">Resources</a></li>
+					</ul>
+				</nav>	
+			</div>
+		</header>
 <div class="wrapper container">
 	<main>
 		<div class="top-banner">
@@ -61,13 +61,15 @@
 		</section>
 		<div class="bottom-banner">
 			<p>Learn more about the program</p>
-			<a href="#0">Contact Us</a>
+			<a href="contact.html">Contact Us</a>
 		</div>
 	</main>
 	<footer>
 		<div class="row">
 			<div class="one-third column">
 				<h2><a href="#0">BCIT-SSD</a></h2>
+				<p><a href="contact.html">Contact</a></p>
+
 			</div>
 			<div class="one-third column">
 				<h2 class="credits">Connect</h2>
