--- a/overview.html
+++ b/overview.html
@@ -1,31 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-    	<title>BCIT-SSD Overview</title>
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i|Montserrat:400,400i,700,700i" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">  
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta charset="utf-8">
+	<title>BCIT-SSD</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i|Montserrat:400,400i,700,700i" rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<header>
-    <div class="header-content-wrap container">
-        <h1><a href="index.html">BCIT</a></h1>
-        <button class="btn-menu">Menu</button>
-        <nav>
-            <ul>
-                <li><a href="overview.html">Overview</a></li>
-                <li><a href="#0">Courses</a></li>
-                <li><a href="#0">Schedule</a></li>
-                <li><a href="#0">Staff</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>	
-    </div>
-</header>
+    <header>
+            <div class="header-content-wrap container">
+                <h1><a href="index.html">BCIT</a></h1>
+                <button class="btn-menu">Menu</button>
+                <nav>
+                    <ul>
+                        <li><a class="nav-link"  href="overview.html">Overview</a></li>
+                        <li><a class="nav-link" href="courses.html">Courses</a></li>
+                        <li><a class="nav-link" href="schedule.html">Schedule</a></li>
+                        <li><a class="nav-link" href="staff.html">Staff</a></li>
+                        <li><a class="nav-link" href="students.html">Students</a></li>
+                        <li><a class="nav-link" href="resources.html">Resources</a></li>
+                    </ul>
+                </nav>	
+            </div>
+        </header>
 <div class="wrapper container">
     <main>
         <section class="process">
@@ -94,6 +93,8 @@
         <div class="row">
             <div class="one-third column">
                 <h2><a href="#0">BCIT-SSD</a></h2>
+                <p><a href="contact.html">Contact</a></p>
+
             </div>
             <div class="one-third column">
                 <h2 class="credits">Connect</h2>
@@ -111,5 +112,7 @@
         </div>
     </footer>
 </div>
+<script src="scripts/menu.js"></script>
+
 </body>
 </html>
