--- a/staff.html
+++ b/staff.html
@@ -28,63 +28,110 @@
 <div class="wrapper container">
         <main>
                 <div class="staff">
-                    <h1>Staff</h1>
+                    
                     <div class="faculty">
-                        <h2>Faculty</h2>
-                        <div class="person">
-                            <h3 class="name">Pat McGee</h3>
-                            <p class="role">SSD Program Lead</p>
-                            <p class="course">C#, SQL, Angular, ASP.NET, Web Security, iOS</p>
-                            <p class="email">Pat_McGee@bcit.ca</p>
+                        <div>
+                            <section class="process">
+                                <h1>STAFF</h1>
+                                <h2><strong>Faculty</strong></h2>
+                            </section>
                         </div>
-                        <div class="person">
-                            <h3 class="name">Marlene Delanghe</h3>
-                            <p class="role">Instructor</p>
-                            <p class="course">Team Building, Resume &amp; Interview Skills</p>
-                            <p class="email"></p>
+                        <div class="card">
+                            <div class="card-header">
+                                <h3 class="name">Pat McGee</h3>    
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">SSD Program Lead</h5>
+                                <p class="card-text">C#, SQL, Angular, ASP.NET, Web Security, iOS</p>
+                                <p class="card-text">Pat_McGee@bcit.ca</p>
+                            </div>
                         </div>
-                        <div class="person">
-                            <h3 class="name">Michael Whyte</h3>
-                            <p class="role">Instructor</p>
-                            <p class="course">Front End Web Design</p>
-                            <p class="email">Michael_Whyte@bcit.ca</p>
+                        <div class="card">
+                            <div class="card-header">
+                                <h3 class="name">Marlene Delanghe</h3>    
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Instructor</h5>
+                                <p class="card-text">Team Building, Resume &amp; Interview Skills</p>
+                                <p class="card-text"></p>
+                            </div>
                         </div>
-                        <div class="person">
-                            <h3 class="name">Jason Harrison</h3>
-                            <p class="role">Instructor</p>
-                            <p class="course">JavaScript / jQuery, Entrepreneurship</p>
-                            <p class="email">Jason_Harrison@bcit.ca</p>
+                        <div class="card">
+                                <div class="card-header">
+                                    <h3 class="name">Michael Whyte</h3>    
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Instructor</h5>
+                                    <p class="card-text">Front End Web Design</p>
+                                    <p class="card-text">Michael_Whyte@bcit.ca</p>
+                                </div>
+                            </div>
+                        <div class="card">
+                            <div class="card-header">
+                                <h3 class="name">Jason Harrison</h3>    
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Instructor</h5>
+                                <p class="card-text">JavaScript / jQuery, Entrepreneurship</p>
+                                <p class="card-text">Jason_Harrison@bcit.ca</p>
+                            </div>
                         </div>
-                        <div class="person">
-                            <h3 class="name">Paul Mills</h3>
-                            <p class="role">Instructor</p>
-                            <p class="course">Java, Android</p>
-                            <p class="email">Paul_Mills@bcit.ca</p>
+                        <div class="card">
+                            <div class="card-header">
+                                <h3 class="name">Paul Mills</h3>    
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Instructor</h5>
+                                <p class="card-text">Java, Android</p>
+                                <p class="card-text">Paul_Mills@bcit.ca</p>
+                            </div>
                         </div>
-                        <div class="person">
-                            <h3 class="name">Jeff Parker</h3>
-                            <p class="role">Instructor</p>
-                            <p class="course">PHP / MySQL</p>
-                            <p class="email">Jeffrey_Parker@bcit.ca</p>
+                        <div class="card">
+                            <div class="card-header">
+                                <h3 class="name">Jeff Parker</h3>    
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Instructor</h5>
+                                <p class="card-text">PHP / MySQL</p>
+                                <p class="card-text">Jeffrey_Parker@bcit.ca</p>
+                            </div>
                         </div>
-                        <div class="person">
-                            <h3 class="name">Medhat Elmasry</h3>
-                            <p class="role">Instructor</p>
-                            <p class="course">MEAN Stack</p>
-                            <p class="email">Medhat_Elmasry@bcit.ca</p>
+                        <div class="card">
+                            <div class="card-header">
+                                <h3 class="name">Medhat Elmasry</h3>    
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Instructor</h5>
+                                <p class="card-text">MEAN Stack</p>
+                                <p class="card-text">Medhat_Elmasry@bcit.ca</p>
+                            </div>
                         </div>
-                    </div>
+                        
                     <div class="administration">
-                        <h2>Administration</h2>
-                        <div class="person">
-                            <h3 class="name">Ron Terencio</h3>
-                            <p class="role">Program Coordinator</p>
-                            <p class="email">Ron_Terencio@bcit.ca</p>
+                        <div>
+                            <section class="process">
+                                <h2><strong>Administration</strong></h2>
+                            </section>
                         </div>
-                        <div class="person">
-                            <h3 class="name">Rhonda Ewashko</h3>
-                            <p class="role">Program Coordinator (2017)</p>
-                            <p class="email">Rhonda_Ewashko@bcit.ca</p>
+
+                        <div class="card">
+                            <div class="card-header">
+                                <h3 class="name">Ron Terencio</h3>    
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Program Coordinator</h5>
+                                <p class="card-text">Ron_Terencio@bcit.ca</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-header">
+                                <h3 class="name">Rhonda Ewashko</h3>    
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Program Coordinator (2017)</h5>
+                                <p class="card-text">MEAN Stack</p>
+                                <p class="card-text">Rhonda_Ewashko@bcit.ca</p>
+                            </div>
                         </div>
                     </div>
                 </div>
