--- a/schedule.html
+++ b/schedule.html
@@ -35,8 +35,8 @@
             </div>
 
             <div class="staff">
-                <table border="1" class='table table-striped'>
-                    <script src="scripts/calendarScheule.js"></script>    
+                <table class='table table-striped'>
+                    <script src="scripts/calendarSchedule.js"></script>    
                 </table>            
             </div>
         </main>
@@ -45,7 +45,6 @@
                 <div class="one-third column">
                     <h2><a href="#0">BCIT-SSD</a></h2>
                     <p><a href="contact.html">Contact</a></p>
-
                 </div>
                 <div class="one-third column">
                     <h2 class="credits">Connect</h2>
