--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 							<li><a class="nav-link" href="schedule.html">Schedule</a></li>
 							<li><a class="nav-link" href="staff.html">Staff</a></li>
 							<li><a class="nav-link" href="students.html">Students</a></li>
-							<li><a class="nav-link" href="resources.html">Resources</a></li>
 					</ul>
 				</nav>	
 			</div>
@@ -37,24 +36,24 @@
 			
 		</div>
 		<section class="process">
-			<h1>More Info</h1>
+			<h1>More Information</h1>
 			<div class="row">
 				<article class="one-half column">
-					<h1>Student Information</h1>
+					<h1><a href="">Student Information</a></h1>
 					<p>All great relationships start with a chat. Online or over a coffee, there's no better way of getting to know each other. We'll listen to your ideas, offer advice and present solutions to meet and exceed your needs.</p>
 				</article>
 				<article class="one-half column">
-					<h1>Student Resources</h1>
+					<h1><a href="">Student Resources</a></h1>
 					<p>Strategise, plan and execute. We create concepts that challenge your ideas and get you thinking differently. We work with you to refine them so that they say the right things and have you grinning from ear to ear..</p>
 				</article>
 			</div>
 			<div class="row">
 				<article class="one-half column">
-					<h1>Program Overview</h1>
+					<h1><a href="">Program Overview</a></h1>
 					<p>From beautiful brands to exciting websites, we design with flair, care and attention to detail. We've listened, we've planned, now we turn those ideas into reality.</p>
 				</article>
 				<article class="one-half column">
-					<h1>E-Resources</h1>
+					<h1><a href="resources.html">E-Resources</a></h1>
 					<p>From beautiful brands to exciting websites, we design with flair, care and attention to detail. We've listened, we've planned, now we turn those ideas into reality.</p>
 				</article>
 			</div>
@@ -69,7 +68,6 @@
 			<div class="one-third column">
 				<h2><a href="#0">BCIT-SSD</a></h2>
 				<p><a href="contact.html">Contact</a></p>
-
 			</div>
 			<div class="one-third column">
 				<h2 class="credits">Connect</h2>
