--- a/courses.html
+++ b/courses.html
@@ -30,30 +30,59 @@
 <div class="wrapper container">
     <main>
             <div class="courseContainer">
-                <h1>Course Summaries</h1>
+                
                 <section class="courses">
-                    <h2>SSD Courses</h2>
-                    <section>
-                            <h3>SSDP-GENR  - Web Programmer (Relational Databases, C# and ASP.NET Core MVC, iOS)</h3>
-                            SSDP-GENR is the general course of the program. We start learning Relational Databases in Microsoft SQL, ASP.NET Core in C#, and iOS development in Swift. We are also introduced to other various fundamental Web Development Practices such as Angular and React, Web Security, API Development, Amazon WebServices, PHP and Laravel, Windows Forms and more. Instructors: Pat Mcgee and Phil Weier.
+
+                    <section class="process">
+                        <h1>Course Summaries</h1>
                     </section>
-                    <section>
-                        <h3>SSDP 1501 - System Foundations 1 (Front-End HTML and CSS)</h3>
-                        SSDP1501 focuses on front-end technologies such as HTML and CSS. We learn to make functional Web pages and how to make them beautiful. Instructor: Michael Whyte. 
+                    
+                    <div class="card">
+                        <div class="card-header">
+                            <h3 class="name">SSDP-GENR</h3>    
+                            <h4>Web Programmer (Relational Databases, C# and ASP.NET Core MVC, iOS)</h4>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">SSDP-GENR is the general course of the program. We start learning Relational Databases in Microsoft SQL, ASP.NET Core in C#, and iOS development in Swift. We are also introduced to other various fundamental Web Development Practices such as Angular and React, Web Security, API Development, Amazon WebServices, PHP and Laravel, Windows Forms and more. Instructors: Pat Mcgee and Phil Weier.</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-header">
+                            <h3 class="name">SSDP 1501</h3>    
+                            <h4>System Foundations 1 (Front-End HTML and CSS)</h4>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">SSDP1501 focuses on front-end technologies such as HTML and CSS. We learn to make functional Web pages and how to make them beautiful. Instructor: Michael Whyte.</p>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <div class="card-header">
+                            <h3 class="name">SSDP 2501</h3>    
+                            <h4>System Foundations 2 (JavaScript and JQuery)</h4>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">SSDP2501 introduces JavaScript and JQuery and how they allow us to make powerful Web Applications. Instructor: Jason Harrison.</p>
+                        </div>
+                    </div>
+
+
+
                     </section>
-                    <section>
+                    <section class="process">
                         <h3>SSDP 2501 - System Foundations 2 (JavaScript and JQuery)</h3>
                         SSDP2501 introduces JavaScript and JQuery and how they allow us to make powerful Web Applications. Instructor: Jason Harrison.
                     </section>
-                    <section>
+                    <section class="process">
                         <h3>SSDP 3501 - System Foundations 3 (Intro to PHP)</h3>
                         SSDP 3501 touches on PHP and server side scripting. We learn how to use the PHP tools such mySQL and Apache. Instructor: Jeff Parker.
                     </section>
-                    <section>
+                    <section class="process">
                         <h3>SSDP 4001 - Specialty Topics(Java and Android)</h3>
                         SSDP4001 focuses on Java development and how it's similar to C# but also different in so many ways. We are also introduced to Android Development using Android Studio. Instructor: Paul Mills.
                     </section>
-                    <section>
+                    <section class="process">
                         <h3>SSDP 5001 - MEAN stack (Node.js and other tools)</h3>
                         SSDP5001 is all about using Node.js and all the powerful tools it provides. We learn to develop in the MEAN (MongoDB - ExpressJS - Angular - Node.js) stack. Instructor: Medhat Elmasry
                     </section>
