--- a/courses.html
+++ b/courses.html
@@ -66,26 +66,36 @@
                             <p class="card-text">SSDP2501 introduces JavaScript and JQuery and how they allow us to make powerful Web Applications. Instructor: Jason Harrison.</p>
                         </div>
                     </div>
+                    
+                    <div class="card">
+                        <div class="card-header">
+                            <h3 class="name">SSDP 3501</h3>    
+                            <h4>System Foundations 3 (Intro to PHP)</h4>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">SSDP 3501 touches on PHP and server side scripting. We learn how to use the PHP tools such mySQL and Apache. Instructor: Jeff Parker.</p>
+                        </div>
+                    </div>
 
+                    <div class="card">
+                        <div class="card-header">
+                            <h3 class="name">SSDP 4001</h3>    
+                            <h4>Specialty Topics(Java and Android)</h4>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">SSDP4001 focuses on Java development and how it's similar to C# but also different in so many ways. We are also introduced to Android Development using Android Studio. Instructor: Paul Mills.</p>
+                        </div>
+                    </div>
 
-
-                    </section>
-                    <section class="process">
-                        <h3>SSDP 2501 - System Foundations 2 (JavaScript and JQuery)</h3>
-                        SSDP2501 introduces JavaScript and JQuery and how they allow us to make powerful Web Applications. Instructor: Jason Harrison.
-                    </section>
-                    <section class="process">
-                        <h3>SSDP 3501 - System Foundations 3 (Intro to PHP)</h3>
-                        SSDP 3501 touches on PHP and server side scripting. We learn how to use the PHP tools such mySQL and Apache. Instructor: Jeff Parker.
-                    </section>
-                    <section class="process">
-                        <h3>SSDP 4001 - Specialty Topics(Java and Android)</h3>
-                        SSDP4001 focuses on Java development and how it's similar to C# but also different in so many ways. We are also introduced to Android Development using Android Studio. Instructor: Paul Mills.
-                    </section>
-                    <section class="process">
-                        <h3>SSDP 5001 - MEAN stack (Node.js and other tools)</h3>
-                        SSDP5001 is all about using Node.js and all the powerful tools it provides. We learn to develop in the MEAN (MongoDB - ExpressJS - Angular - Node.js) stack. Instructor: Medhat Elmasry
-                    </section>
+                    <div class="card">
+                        <div class="card-header">
+                            <h3 class="name">SSDP 5001</h3>    
+                            <h4>MEAN stack (Node.js and other tools)</h4>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">SSDP5001 is all about using Node.js and all the powerful tools it provides. We learn to develop in the MEAN (MongoDB - ExpressJS - Angular - Node.js) stack. Instructor: Medhat Elmasry</p>
+                        </div>
+                    </div>
                 </section>
             </div> 
     </main>
