--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			
 		</div>
 		<section class="process">
-			<h1>More Information</h1>
+			<h1>-More Information-</h1>
 			<div class="row">
 				<article class="one-half column">
 					<h1><a href="">Student Information</a></h1>
