--- a/staff.html
+++ b/staff.html
@@ -31,7 +31,7 @@
                     <div class="faculty">
                         <div>
                             <section class="process">
-                                <h1>STAFF</h1>
+                                <h1>Staff</h1>
                                 <h2><strong>Faculty</strong></h2>
                             </section>
                         </div>
