--- a/students.html
+++ b/students.html
@@ -30,7 +30,7 @@
     <main>
         <div>
             <section class="process">
-                <h1>STUDENT LIST</h1>
+                <h1>Student List</h1>
                 <p></p>
             </section>
         </div>
