fixed program intake dates

--- a/schedule.html
+++ b/schedule.html
@@ -28,7 +28,7 @@
         <main>
             <div>
                 <section class="process">
-                    <h1>Course Schedule for 2019</h1>
+                    <h1>Course Schedule for 2018 - 2019</h1>
                     <p></p>
                 </section>
             </div>
