--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
 	<title>BCIT-SSD</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i|Montserrat:400,400i,700,700i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<header>
 			<div class="header-content-wrap container">
-				<h1><a href="index.html">BCIT</a></h1>
+				<h2><a href="index.html"><i class='fas fa-home' id='githubicon'></i></a></h2>
 				<button class="btn-menu">Menu</button>
 				<nav >
 					<ul>
-							<li><a class="nav-link"  href="overview.html">Overview</a></li>
-							<li><a class="nav-link" href="courses.html">Courses</a></li>
-							<li><a class="nav-link" href="schedule.html">Schedule</a></li>
-							<li><a class="nav-link" href="staff.html">Staff</a></li>
-							<li><a class="nav-link" href="students.html">Students</a></li>
+						<li><a class="nav-link"  href="overview.html">Overview</a></li>
+						<li><a class="nav-link" href="courses.html">Courses</a></li>
+						<li><a class="nav-link" href="schedule.html">Schedule</a></li>
+						<li><a class="nav-link" href="staff.html">Staff</a></li>
+						<li><a class="nav-link" href="students.html">Students</a></li>
 					</ul>
 				</nav>	
 			</div>
@@ -27,13 +29,17 @@
 <div class="wrapper container">
 	<main>
 		<div class="top-banner">
-			<h2>Software Systems Developer Program</h2>
-			<h3>Web Programmer Option</h3>
-			
+			<div class="bcitlogo">
+				<a href="https://www.bcit.ca"><img src='images/bcit_small.png' alt='BCIT Logo'></a>
+			</div>
+			<div>
+				<h2>Software Systems</h2>
+				<h2>Developer Program</h2>
+				<h3>(Web Programmer Option)</h3>
+			</div>		
 		</div>
 		<div class="mid-banner">
 			<img src="images/branding.jpg" alt="laptop on desk">
-			
 		</div>
 		<section class="process">
 			<h1>-More Information-</h1>
