--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <body>
 <header>
     <div class="header-content-wrap container">
-        <h1><a href="index.html">BCIT</a></h1>
+            <h2><a href="index.html"><i class='fas fa-home' id='githubicon'></i></a></h2>
         <button class="btn-menu">Menu</button>
         <nav>
             <ul>
