--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                     </li>
                 </ul>
             </section>
-            <section class="process">
+            <section class="contactForm">
                 <h2>Contact Form</h2>
                 <form onsubmit="alert('Thank you for your feedback.');" method="post" class="form">
                     <div class="formRow">
