--- a/contact.html
+++ b/contact.html
@@ -1,148 +1,160 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i|Montserrat:400,400i,700,700i" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">  
-    
-	<title>BCIT-SSD Contacts</title>
+<meta charset="utf-8">
+	<title>BCIT-SSD</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i|Montserrat:400,400i,700,700i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<header>
-    <div class="header-content-wrap container">
-            <h2><a href="index.html"><i class='fas fa-home' id='githubicon'></i></a></h2>
-        <button class="btn-menu">Menu</button>
-        <nav>
-            <ul>
-                    <li><a class="nav-link"  href="overview.html">Overview</a></li>
-                    <li><a class="nav-link" href="courses.html">Courses</a></li>
-                    <li><a class="nav-link" href="schedule.html">Schedule</a></li>
-                    <li><a class="nav-link" href="staff.html">Staff</a></li>
-                    <li><a class="nav-link" href="students.html">Students</a></li>
-            </ul>
-        </nav>	
-    </div>
-</header>
-<div class="wrapper container">
-    <main>
-        <section class="process">
-            <h1>Contact Us!</h1>
-        <div>
+	<header>
+			<div class="header-content-wrap container">
+				<h2><a href="index.html"><i class='fas fa-home' id='githubicon'></i></a></h2>
+				<button class="btn-menu">Menu</button>
+				<nav >
+					<ul>
+						<li><a class="nav-link"  href="overview.html">Overview</a></li>
+						<li><a class="nav-link" href="courses.html">Courses</a></li>
+						<li><a class="nav-link" href="schedule.html">Schedule</a></li>
+						<li><a class="nav-link" href="staff.html">Staff</a></li>
+						<li><a class="nav-link" href="students.html">Students</a></li>
+					</ul>
+				</nav>	
+			</div>
+		</header>
+    <div class="wrapper container">
+        <main>
             <section class="process">
-                <h2>Helpful Links</h2>
-                <ul>
-                    <li><a href="https://secure.bcit.ca/sis/apply/">Start your application.</a></li>
-                    <li><a href="https://secure.bcit.ca/sis/apply/">Check your application status.</a></li>
-                    <li><a href="https://www.bcit.ca/international/">Find more information for international students.</a></li>
-                    <li><a href="https://www.bcit.ca/finaid/">Find more information about financial aids.</a></li>
-                </ul>
-            </section>
-            <section class="process">
-                <h2>Contact Information</h2>
-                <div class="contactInfo">
-                    <section class="box">
-                        <h4>For admission and program inquiries: </h4>
+                <h1>Contact Us!</h1>
+                <div>
+                    <section class="process">
+                        <h2>Helpful Links</h2>
                         <ul>
-                            <li><b>Phone: </b>604.412.7788</li>
-                            <li><b>Fax: </b>604.408.0921</li>
-                            <li><b>Email: </b>HTP@bcit.ca</li>
+                            <li><a href="https://secure.bcit.ca/sis/apply/">Start your application.</a></li>
+                            <li><a href="https://secure.bcit.ca/sis/apply/">Check your application status.</a></li>
+                            <li><a href="https://www.bcit.ca/international/">Find more information for international
+                                    students.</a></li>
+                            <li><a href="https://www.bcit.ca/finaid/">Find more information about financial aids.</a>
+                            </li>
                         </ul>
                     </section>
-            <section class="box">
-                <h4>Mailing Adress</h4>
-                <ul>
-                    <li>
-                        HTP Programs - BCIT Downtown Campus<br>
-                        350 - 555 Seymour Street<br>
-                        Vancouver, BC, Canada <br>
-                        V6B 3H6
-                    </li>
-                </ul>
-            </section>
-            <section class="contactForm">
-                <h2>Contact Form</h2>
-                <form onsubmit="alert('Thank you for your feedback.');" method="post" class="form">
-                    <div class="formRow">
-                        <div class="formLabel">
-                            <label for="firstname">First name</label>
+                    <section class="process">
+                        <h2>Contact Information</h2>
+                        <div class="contactInfo">
+                            <section class="box">
+                                <h4>For admission and program inquiries: </h4>
+                                <ul>
+                                    <li><b>Phone: </b>604.412.7788</li>
+                                    <li><b>Fax: </b>604.408.0921</li>
+                                    <li><b>Email: </b>HTP@bcit.ca</li>
+                                </ul>
+                            </section>
+                            <section class="box">
+                                <h4>Mailing Adress</h4>
+                                <ul>
+                                    <li>
+                                        HTP Programs - BCIT Downtown Campus<br>
+                                        350 - 555 Seymour Street<br>
+                                        Vancouver, BC, Canada <br>
+                                        V6B 3H6
+                                    </li>
+                                </ul>
+                            </section>
+                            <section>
+                                <h2>Contact Form</h2>
+                                <form onsubmit="alert('Thank you for your feedback.');" method="post"
+                                    class="contactForm">
+                                    <div class="formRow">
+                                        <div class="formLabel">
+                                            <label for="firstname">First name</label>
+                                        </div>
+                                        <div>
+                                            <input type="text" class="formInput" name="firstname" id="firstname"
+                                                maxlength="80" placeholder="First Name" required="">
+                                        </div>
+                                    </div>
+                                    <div class="formRow">
+                                        <div class="formLabel">
+                                            <label for="lastname">Last name</label>
+                                        </div>
+                                        <div>
+                                            <input type="text" class="formInput" name="lastname" id="lastname"
+                                                maxlength="80" placeholder="Last Name" required="">
+                                        </div>
+                                    </div>
+                                    <div class="formRow">
+                                        <div class="formLabel">
+                                            <label for="email">Email</label>
+                                        </div>
+                                        <div>
+                                            <input type="email" class="formInput" name="email" id="email" maxlength="80"
+                                                placeholder="email@example.com" required="">
+                                        </div>
+                                    </div>
+                                    <div class="formRow">
+                                        <div class="formLabel">
+                                            <label for="phone">Phone</label>
+                                        </div>
+                                        <div>
+                                            <input type="tel" class="formInput" name="phone" id="phone" maxlength="30"
+                                                placeholder="(123) 456 - 7890">
+                                        </div>
+                                    </div>
+                                    <div class="formRow">
+                                        <div class="select">
+                                            <label><input type="radio" name="status" value="CurrentStudent" required="">
+                                                Current Student</label><br>
+                                            <label><input type="radio" name="status" value="ProsoectiveStudent">
+                                                Prosoective Student</label><br>
+                                            <label><input type="radio" name="status" value="Instructor">
+                                                Instructor</label>
+                                        </div>
+                                    </div>
+                                    <div class="formRow">
+                                        <div>
+                                            <label for="comments">Questions or Comments</label>
+                                        </div>
+                                        <div>
+                                            <textarea class="formInput" name="comments" id="comments" rows="5" cols="23"
+                                                required=""></textarea>
+                                        </div>
+                                    </div>
+                                    <div class="formRow">
+                                        <div class="actions">
+                                            <input id="submit" type="submit" value="send » ">
+                                        </div>
+                                    </div>
+                                </form>
+                            </section>
                         </div>
-                        <div class="formInput">
-                            <input type="text" name="firstname" id="firstname" maxlength="80" placeholder="First Name" required="">
-                        </div>
-                    </div>
-                    <div class="formRow">
-                        <div class="formLabel">
-                            <label for="lastname">Last name</label>
-                        </div>
-                        <div class="formInput">
-                            <input type="text" name="lastname" id="lastname" maxlength="80" placeholder="Last Name" required="">
-                        </div>
-                    </div>
-                    <div class="formRow">
-                        <div class="formLabel">
-                            <label for="email">Email</label>
-                        </div>
-                        <div class="formInput">
-                            <input type="email" name="email" id="email" maxlength="80" placeholder="email@example.com" required="">
-                        </div>
-                    </div>
-                    <div class="formRow">
-                        <div class="formLabel">
-                                <label for="phone">Phone</label>
-                        </div>
-                        <div class="formInput">
-                                <input type="tel" name="phone" id="phone" maxlength="30" placeholder="(123) 456 - 7890">
-                        </div>
-                    </div>
-                    <div class="formRow">
-                        <div class="select">
-                            <label><input type="radio" name="status" value="CurrentStudent" required=""> Current Student</label><br>
-                            <label><input type="radio" name="status" value="ProsoectiveStudent"> Prosoective Student</label><br>
-                            <label><input type="radio" name="status" value="Instructor"> Instructor</label>
-                        </div>
-                    </div>
-                    <div class="formRow">
-                        <div>
-                            <label for="comments">Questions or Comments</label>
-                        </div>
-                        <div>
-                            <textarea name="comments" id="comments" rows="5" cols="23" required=""></textarea>
-                        </div>
-                    </div>
-                    <div class="formRow">
-                        <div class="actions">
-                            <input id="submit" type="submit" value="send » ">
-                        </div>
-                    </div>
-                </form>
-            </section>       
-        </div>     
-    </main>
-    <footer>
-        <div class="row">
-            <div class="one-third column">
-                <h2><a href="#0">BCIT-SSD</a></h2>
-                <p><a href="contact.html">Contact</a></p>
+        </main>
+        <footer>
+            <div class="row">
+                <div class="one-third column">
+                    <h2><a href="#0">BCIT-SSD</a></h2>
+                    <p><a href="contact.html">Contact</a></p>
+                </div>
+                <div class="one-third column">
+                    <h2 class="credits">Connect</h2>
+                    <p><a href="http://www.fhoke.com/">Attend an Info Session</a></p>
+                    <p><a href="http://www.fhoke.com/">Connect with an Advisor</a></p>
+                    <p><a href="http://www.fhoke.com/">Sign up for a tour</a></p>
+                </div>
+                <div class="one-third column">
+                    <h2 class="contact">Find Us</h2>
+                    <p>British Columbia Institute of Technology
+                        3700 Willingdon Avenue
+                        Burnaby, British Columbia
+                        Canada, V5G 3H2</p>
+                </div>
             </div>
-            <div class="one-third column">
-                <h2 class="credits">Connect</h2>
-                <p><a href="http://www.fhoke.com/">Attend an Info Session</a></p>
-                <p><a href="http://www.fhoke.com/">Connect with an Advisor</a></p>
-                <p><a href="http://www.fhoke.com/">Sign up for a tour</a></p>
-            </div>
-            <div class="one-third column">
-                <h2 class="contact">Find Us</h2>
-                <p>British Columbia Institute of Technology
-                    3700 Willingdon Avenue
-                    Burnaby, British Columbia
-                    Canada, V5G 3H2</p>
-            </div>
-        </div>
-    </footer>
-</div>
-<script src="scripts/menu.js"></script>
+        </footer>
+    </div>
+    <script src="scripts/menu.js"></script>
 </body>
+
 </html>
