--- a/schedule.html
+++ b/schedule.html
@@ -5,7 +5,8 @@
 	<title>BCIT-SSD</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i|Montserrat:400,400i,700,700i" rel="stylesheet">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -43,10 +44,6 @@
         <footer>
             <div class="row">
                 <div class="one-third column">
-                    <h2><a href="#0">BCIT-SSD</a></h2>
-                    <p><a href="contact.html">Contact</a></p>
-                </div>
-                <div class="one-third column">
                     <h2 class="credits">Connect</h2>
                     <p><a href="http://www.fhoke.com/">Attend an Info Session</a></p>
                     <p><a href="http://www.fhoke.com/">Connect with an Advisor</a></p>
@@ -58,6 +55,13 @@
                         3700 Willingdon Avenue
                         Burnaby, British Columbia
                         Canada, V5G 3H2</p>
+                </div>
+                <div class="one-third column">
+                    <p><strong>BCIT SSDP-1501-0 Group Project</strong></p>
+                    <p>&copy; 2019 | AJ Adversalo | Jan Miranda</p>
+                    <p></p>
+                    <p></p>
+                    <p>For Educational Purposes Only</a></p>
                 </div>
             </div>
         </footer>
