--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<img src="images/branding.jpg" alt="laptop on desk">
 		</div>
 		<section class="process">
-			<h1>-More Information-</h1>
+			<h1>More Information</h1>
 			<div class="row">
 				<article class="one-half column">
 					<h1><a href="">Student Information</a></h1>
@@ -55,7 +55,7 @@
 			</div>
 			<div class="row">
 				<article class="one-half column">
-					<h1><a href="">Program Overview</a></h1>
+					<h1><a href="">Career Counseling</a></h1>
 					<p>From beautiful brands to exciting websites, we design with flair, care and attention to detail. We've listened, we've planned, now we turn those ideas into reality.</p>
 				</article>
 				<article class="one-half column">
@@ -72,10 +72,6 @@
 	<footer>
 		<div class="row">
 			<div class="one-third column">
-				<h2><a href="#0">BCIT-SSD</a></h2>
-				<p><a href="contact.html">Contact</a></p>
-			</div>
-			<div class="one-third column">
 				<h2 class="credits">Connect</h2>
 				<p><a href="http://www.fhoke.com/">Attend an Info Session</a></p>
 				<p><a href="http://www.fhoke.com/">Connect with an Advisor</a></p>
@@ -87,6 +83,13 @@
 					3700 Willingdon Avenue
 					Burnaby, British Columbia
 					Canada, V5G 3H2</p>
+			</div>
+			<div class="one-third column">
+				<p><strong>BCIT SSDP-1501-0 Group Project</strong></p>
+				<p>&copy; 2019 | AJ Adversalo | Jan Miranda</p>
+				<p></p>
+				<p></p>
+				<p>For Educational Purposes Only</a></p>
 			</div>
 		</div>
 	</footer>
