--- a/contact.html
+++ b/contact.html
@@ -140,10 +140,6 @@
         <footer>
             <div class="row">
                 <div class="one-third column">
-                    <h2><a href="#0">BCIT-SSD</a></h2>
-                    <p><a href="contact.html">Contact</a></p>
-                </div>
-                <div class="one-third column">
                     <h2 class="credits">Connect</h2>
                     <p><a href="http://www.fhoke.com/">Attend an Info Session</a></p>
                     <p><a href="http://www.fhoke.com/">Connect with an Advisor</a></p>
@@ -155,6 +151,13 @@
                         3700 Willingdon Avenue
                         Burnaby, British Columbia
                         Canada, V5G 3H2</p>
+                </div>
+                <div class="one-third column">
+                    <p><strong>BCIT SSDP-1501-0 Group Project</strong></p>
+                    <p>&copy; 2019 | AJ Adversalo | Jan Miranda</p>
+                    <p></p>
+                    <p></p>
+                    <p>For Educational Purposes Only</a></p>
                 </div>
             </div>
         </footer>
